[package]
name = "wp-td"
version = "0.7.0-alpha.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
log = "0.4.29"
once_cell = "1.21.3"
regex = "1.12.2"
reqwest = { version = "0.12.25", default-features = false, features = ["cookies", "rustls-tls"] }
shuttle-runtime = "0.57.0"
teloxide = { version = "0.17.0", features = ["ctrlc_handler", "macros"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
wp-mini = "0.2.0-alpha.2"
wp-mini-epub = "0.9.0-alpha.1"
